crates/query-engine/translation/tests/snapshots/tests__types__select_types_on_comparisons.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%1_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_types"."date" AS "date"
            FROM
              "public"."types" AS "%0_types"
            WHERE
              (
                (
                  (
                    (
                      ("%0_types"."date" = cast($1 as date))
                      AND ("%0_types"."time" = cast($2 as time))
                    )
                    AND ("%0_types"."timetz" = cast($3 as timetz))
                  )
                  AND ("%0_types"."timestamp" = cast($4 as timestamp))
                )
                AND (
                  "%0_types"."timestamptz" = cast($5 as timestamptz)
                )
              )
          ) AS "%2_rows"
      ) AS "%2_rows"
  ) AS "%1_universe";

{
    1: String(
        "2021-12-21",
    ),
    2: String(
        "02:35:59",
    ),
    3: String(
        "02:35:59-07",
    ),
    4: String(
        "2013-11-03 02:35:59",
    ),
    5: String(
        "2013-11-03 02:35:59-07",
    ),
}
